<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_scan_unifier</name>
  <version>0.9.0</version>
  <description>The laser_scan_unifier package holds code to unify two or more laser-scans to one unified scan-message</description>

  <!-- original authors -->
  <maintainer email="felixmessmer@gmail.com">Felix Messmer</maintainer>
  <maintainer email="benjamin.maidel@mojin-robotics.de">Benjamin Maidel</maintainer>
  <author email="frm@ipa.fraunhofer.de">Florian Mirus</author>
  <!-- ros2 port author -->
  <author email="nikola.banovic@posidonia-technology.hr">Nikola Banović</author>

  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>generate_parameter_library</build_depend>

  <depend>laser_geometry</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
